Trying to fix x overflow

--- a/components/Home.css
+++ b/components/Home.css
@@ -122,6 +122,9 @@ h1,h2 {
 
   @media screen and (max-width: 900px) {
     /* Change flex-direction to stack the columns vertically */
+    body {
+        overflow-x: hidden;
+    }
   .container {
     flex-direction: column;
     justify-content: center;
